--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: 'Saira Semi Condensed';
+    /*src: url('fonts/Saira_Semi_Condensed/SairaSemiCondensed-Black.ttf') format('truetype'),*/
+    /*url('fonts/Saira_Semi_Condensed/SairaSemiCondensed-Bold.ttf') format('truetype'),*/
+    /*url('fonts/Saira_Semi_Condensed/SairaSemiCondensed-ExtraBold.ttf') format('truetype'),*/
+    /*url('fonts/Saira_Semi_Condensed/SairaSemiCondensed-ExtraLight.ttf') format('truetype'),*/
+    /*url('fonts/Saira_Semi_Condensed/SairaSemiCondensed-Light.ttf') format('truetype'),*/
+    /*url('fonts/Saira_Semi_Condensed/SairaSemiCondensed-Medium.ttf') format('truetype'),*/
+    src: url('fonts/Saira_Semi_Condensed/SairaSemiCondensed-Regular.ttf') format('truetype'),
+    url('fonts/Saira_Semi_Condensed/SairaSemiCondensed-SemiBold.ttf') format('truetype'),
+    url('fonts/Saira_Semi_Condensed/SairaSemiCondensed-Thin.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 td > ul{
     margin-left: 15px;
@@ -17,6 +31,10 @@ h1.ck-placeholder{
 p.ck-placeholder{
     margin-top: 20px;
     height: 100px;
+}
+
+h1.yellow{
+    color: #f7a313;;
 }
 
 /*th:hover, td:hover{*/
